# SussexMCOMP_AdaptiveSystems_Assignment2

./: .gitignore  LICENSE  LICENSE_THIRD_PARTY  README.md  bootstrap.sh  main.py  migrate_to_option_a.sh  pyproject.toml
batches/: pilot_01.json
notes/: README.md  beer_1996_agent_spec.md  design_decisions.md  methods_log.md  plasticity_rule.md  stolting_2023_notes.md  williams_2005_notes.md
plan/: README.md  design_decisions.md  experiment_targets.json  experiments.md  final_todo.md  todo.md  updated_todo.md
report/: README.md  bibliography.bib  methods.tex  references.bib  report.tex
report/sections/: README.md  discussion.tex  introduction.tex  methods.tex  results.tex
results/: README.md
results/data/: README.md
results/figures/: README.md
scripts/: experiment_status.py  ga_baseline_check.py  generate_system_diagram.dot  launch_batch.py  profile_trial.py  substrate_check.py  verify_vendored_ctrnn.py
scripts/analysis/: behavioural_trajectories.py  frozen_hp_test.py  load_runs.py  plot_utils.py  replication_figure.py  search_dynamics.py  viable_range_compact.py  viable_range_diagnostics.py
src/: README.md
src/agent/: README.md  body.py  config.py  sensors.py
src/ctrnn/: README.md  _madvn.py  agent.py  config.py  genotype.py
src/environment/: README.md  config.py  fitness.py  shapes.py  trial.py
src/experiments/: README.md  (+4 more)
tests/: README.md  test_body.py  test_configs.py  test_ctrnn_agent.py  test_evolve.py  test_fitness.py  test_ga.py  test_genotype.py  test_hp.py  test_io.py  test_load_runs.py  test_sensors.py  test_shapes.py  test_trial.py
(+8 files in other folders)
