[project]
name = "sussexmcomp-adaptivesystems-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
